# reply_guy_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO_TASKS.json  debug_sources.py  docker-compose.yml  enable_sources.py  portainer-stack.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_bot.sh  supabase_schema.sql  verify_async.py
.archive/: .gitignore  README.md
config/: __init__.py  prompts.py  settings.py
docs/: ANALISIS_TECNICO.md  RESILIENCE_GUIDE.md  RETRY_FLOW_DIAGRAM.txt
docs/archive/: EXECUTION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_T007-S5.md  IMPLEMENTATION_SUMMARY_T013.md  T015_SECURITY_HARDENING_REPORT.md  T017_IMPLEMENTATION_SUMMARY.md
migrations/: 001_add_failed_tweets_table.sql  002_add_missing_source_tables.sql
scripts/: debug_ai.py  debug_fallback.py  docker_build_push.sh  healthcheck.py  manual_cookie_export.py  manual_login.py  test_ai_simple.py  test_cookiebot.py  test_login.py  verify_system.py
src/: __init__.py  ai_client.py  alerts.py  background_worker.py  bot.py  circuit_breaker.py  database.py  database_sqlite.py  rate_limiter.py  scheduler.py  telegram_client.py  topic_filter.py  tweet_filter.py  x_delegate.py
src/cookiebot/: __init__.py  base.py  manager.py
src/tweet_sources/: __init__.py  aggregator.py  base.py  home_feed.py  search_query.py  target_account.py
tests/: __init__.py  conftest.py  verify_duplication.py
tests/integration/: __init__.py  test_ghost_delegate_security.py  test_integration.py  test_x_delegate_rate_limiting.py
tests/real/: README.md  (+9 more)
(+14 files in other folders)
